# blob-stream

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml
docs/: index.md
src/: CMakeLists.txt
src/include/blob-stream/: blob_stream_in.h  blob_stream_logic_in.h  blob_stream_logic_out.h  blob_stream_out.h  commands.h  debug.h  types.h
src/lib/: CMakeLists.txt  blob_stream_in.c  blob_stream_logic_in.c  blob_stream_logic_out.c  blob_stream_out.c  debug.c
src/test/: CMakeLists.txt  main.c  test.c  utest.h
